feat(base de datos): añadir nuevas columnas a la tabla countries para emoji, nacionalidad, código numérico y detalles de moneda
- Añadidas nuevas columnas a la tabla `countries` para almacenar:
  - Emoji de la bandera del país
  - Nacionalidad (denominación de los habitantes)
  - Código numérico internacional
  - Detalles de moneda (nombre y símbolo)

chore(docker): actualizar valor por defecto de JWT_SECRET para fomentar el uso de claves más seguras en producción

- Actualizado el valor por defecto de la variable de entorno `JWT_SECRET`
- Implementada recomendación para usar claves más robustas en entornos de producción
- Mejorada la seguridad mediante la promoción de mejores prácticas en la configuración